fixed: group headings left-aligned in rtl languages, https://github.com/kobotoolbox/enketo-express/issues/421

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -19,7 +19,6 @@ $media-margin: 10px;
         margin-top: 9px;
         margin-bottom: 9px;
         color: $brand-primary-color;
-        text-align: left;
     }
 }
 
